Use full available height when sizing percent content in cells

This was an error in https://codereview.chromium.org/2037783002. I shouldn't be
baking in the notion of content-box a second time to cells like that: the available height to
its content is already constrained by the content box.

I can't now see any good reason for why I did that - I think was erroneously trying
to match old, incorrect behaviour in some results.

BUG=620326

Review-Url: https://codereview.chromium.org/2075393002
Cr-Commit-Position: refs/heads/master@{#402748}

Former-commit-id: 1afb8400a1d933cd50a16947899b0d88d2d30fb0